k8s/kube/andes-prod/ingress-developer.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: api-ingress-developers
  namespace: andes-prod
  annotations:
    kubernetes.io/ingress.class: "nginx"
    certmanager.k8s.io/cluster-issuer: letsencrypt-prod
    certmanager.k8s.io/acme-challenge-type: "dns01"
    ingress.kubernetes.io/proxy-connect-timeout: "600"
    ingress.kubernetes.io/proxy-read-timeout: "600"
    ingress.kubernetes.io/proxy-send-timeout: "600"
    ingress.kubernetes.io/send-timeout: "600"
    nginx.ingress.kubernetes.io/rewrite-target: /api-docs/$1
    nginx.ingress.kubernetes.io/use-regex: "true"
    certmanager.k8s.io/acme-dns01-provider: "route53"
    kubernetes.io/tls-acme: "true"
spec:
  tls:
  - hosts:
    - developers.osacontrol.com
    - developers.osacontrol.cl
    secretName: letsencrypt-prod
  rules:
  - host: developers.osacontrol.com
    http:
      paths:
      - path: /(.*)
        backend:
          serviceName: osa-andes-service
          servicePort: 3030
  - host: developers.osacontrol.cl
    http:
      paths:
      - path: /(.*)
        backend:
          serviceName: osa-andes-service
          servicePort: 3030
