k8s/kube/andes-prod/ingress-nginx.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: api-ingress-andes
  namespace: andes-prod
  annotations:
    kubernetes.io/ingress.class: "nginx"
    certmanager.k8s.io/cluster-issuer: letsencrypt-prod
    certmanager.k8s.io/acme-challenge-type: "dns01"
    ingress.kubernetes.io/proxy-connect-timeout: "600"
    ingress.kubernetes.io/proxy-read-timeout: "600"
    ingress.kubernetes.io/proxy-send-timeout: "600"
    ingress.kubernetes.io/send-timeout: "600"
    certmanager.k8s.io/acme-dns01-provider: "route53"
    kubernetes.io/tls-acme: "true"
spec:
  tls:
  - hosts:
    - andes.osacontrol.com
    - andes.osacontrol.cl
    secretName: letsencrypt-prod
  rules:
  - host: andes.osacontrol.com
    http:
      paths:
      - path: /
        backend:        
          serviceName: osa-andes-service
          servicePort: 3030
  - host: andes.osacontrol.cl
    http:
      paths:
      - path: /
        backend:
          serviceName: osa-andes-service
          servicePort: 3030
